#1 Step refactor -> cleaned pom, deleted package with persistence operation, added getProducers service
