# docs/openapi/api-external-interop-v1.yaml
@@ -209,6 +209,54 @@ paths:
                 detail: 'There is a problem processing the request on the server.'
                 traceId: 'string'
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please try again later.'}]
+                
+   '/eservices/getProducers':
+    get:
+      summary: Retrive e-services producers
+      description: >-
+        Retrive e-services producers : producerName
+      tags:
+        - Read
+      operationId: getEservicesProducers
+      parameters:
+        - name: producerName
+          in: query
+          required: false
+          description: the e-service's producer name
+          schema:
+            type: string
+            format: string
+      responses:
+        '200':
+          description: >-
+            The search for the list of producers has been performed successfully
+          content:
+            application/json:
+              schema:
+               type: array
+               items:
+                $ref: '#/components/schemas/SearchProducerNameResponse'
+        '400':
+          description: >-
+            The provided input data is invalid
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':                  
+          description: >-
+            A managed error has occured during the request elaboration
+          content:                        
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+              example:
+                type: string
+                status: 500 
+                title: 'Internal Server Error'
+                detail: 'There is a problem processing the request on the server.'
+                traceId: 'string'
+                errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please ry again later.'}]                
 
 components:
   schemas:
@@ -250,11 +298,22 @@ components:
           type: string
           format: time
         
+    SearchProducerNameResponse:
+      type: object
+      properties:
+        label:
+          title: label of producer's name
+          type: string
+        value:
+          title: value of producer's name
+          type: string
+          
     EserviceState:
       type: string
       enum:
-        - ACTIVE 
-        - INACTIVE
+        - ONLINE 
+        - OFFLINE
+        - N/D
         
     Problem:
       properties:
